[package]
name = "esp-now-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = "0.2.3"
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }
smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
critical-section = "1.1.1"
atomic-polyfill = "1.0.1"
log = "0.4.17"
embedded-svc = { version = "0.23.1", default-features = false, features = [], optional = true }
enumset = { version = "1", default-features = false, optional = true }
linked_list_allocator = { version = "0.10.3", default-features = false, features = ["const_mut_refs"] }
embedded-io = "0.4.0"
fugit = "0.3.6"
heapless = { version = "0.7.14", default-features = false }
num-derive = { version = "0.3", features = ["full-syntax"] }
num-traits = { version = "0.2", default-features = false }
esp-wifi-sys = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi-sys" }
embassy-sync = { version = "0.1.0", optional = true }
embassy-futures = { version = "0.1.0", optional = true }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", features = ["nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"], optional = true }
embassy-net-driver = { git = "https://github.com/embassy-rs/embassy", rev = "26474ce6eb759e5add1c137f3417845e0797df3a", optional = true }
icm42670 = "0.1.1"
shared-bus = "0.2.5"
libm = "0.2.6"

[dev-dependencies]
embassy-futures = "0.1.0"
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "33fde67257bfbc6c0aebf7649fd302c82ed94c64" }
bleps-macros = { git = "https://github.com/bjoernQ/bleps", package = "bleps-macros", rev = "33fde67257bfbc6c0aebf7649fd302c82ed94c64" }
embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0", features = ["nightly"] }
futures-util = { version = "0.3.17", default-features = false }


[target.xtensa-esp32-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp32-hal = { version = "0.10.0", optional = true, features = [ "rt" ] }
esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32","esp32-async", "esp-now"]}
xtensa-lx-rt = { version = "0.13.0", features = ["esp32"], optional = true }
esp-println = { version = "0.3.0", features = ["esp32"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.5.0", features = [
    "esp32",
    "panic-handler",
    "print-uart",
] }

[target.riscv32imc-unknown-none-elf.dependencies]
esp32c3-hal = { version = "0.7.0", optional = true }
esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32c3","esp32c3-async", "esp-now"]}
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.5.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
riscv-rt = { version = "0.8", optional = true }
esp-println = { version = "0.2.1", features = [ "esp32c3" ] }

[target.xtensa-esp32s3-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32s3","esp32s3-async", "esp-now"]}
esp32s3-hal = { version = "0.7.0", optional = true, features = [ "rt" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.5.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.12.0", features = ["esp32s3"], optional = true }
esp-println = { version = "0.2.1", features = [ "esp32s3" ] }

[target.xtensa-esp32s2-none-elf.dependencies]
xtensa-atomic-emulation-trap = "0.2.0"
esp-wifi = { version = "0.1.0", git = "https://github.com/esp-rs/esp-wifi", package = "esp-wifi", features = ["esp32s2","esp32s2-async", "esp-now"]}
esp32s2-hal = { version = "0.7.0", optional = true, features = [ "rt" ] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.5.0", features = [
    "esp32s2",
    "panic-handler",
    "print-uart",
] }
xtensa-lx-rt = { version = "0.13.0", features = ["esp32s2"], optional = true }
esp-println = { version = "0.2.1", features = [ "esp32s2" ] }

[features]
default = [ "rt", "eh1" ]
rt = ["xtensa-lx-rt"] # for esp32 and esp32s2 chips
# rt = ["riscv-rt"] # for esp32c3 chip
# eh1 = ["esp32s3"]
# eh1 = ["esp32-hal/eh1", "esp32"]
eh1 = ["esp32s2-hal/eh1", "esp32s2"]
# eh1 = ["esp32c3-hal/eh1", "esp32c3]

esp32 = []
esp32s2 = []
esp32s3 = []
esp32c3 = []
